--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <developerConnection>scm:git:ssh://git@github.com/Dwolla/dwolla-java.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/Dwolla/dwolla-java.git</connection>
         <url>https://github.com/Dwolla/dwolla-java</url>
-        <tag>dwolla-java-sdk-1.2.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
